[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/optionMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/backgroud_main menu.png" type="Texture" id=2]
[ext_resource path="res://fonts/optionMenu.tres" type="StyleBox" id=3]
[ext_resource path="res://fonts/font16.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/home_button1.png" type="Texture" id=5]
[ext_resource path="res://assets/home_button2.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[node name="optionMenu" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/scale = Vector2( 0.666225, 0.664497 )
texture = ExtResource( 2 )
centered = false

[node name="MainMenu" type="Polygon2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 420, 0 )
polygon = Vector2Array( 60, 60, 60, 660, 420, 660, 420, 60 )
uv = Vector2Array(  )
color = Color( 0, 0.0745098, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="VButtonArray" type="VButtonArray" parent="MainMenu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 120.0
margin/right = 360.0
margin/bottom = 600.0
custom_styles/focus = ExtResource( 3 )
custom_styles/selected = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font_selected = ExtResource( 4 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.765625, 0.765625, 0.765625, 1 )
flat = false
button/count = 5
button/min_button_size = 93.0
button/align = 0
button/0/text = "World 1"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "World 2"
button/1/tooltip = ""
button/1/icon = null
button/2/text = "World 3"
button/2/tooltip = ""
button/2/icon = null
button/3/text = "World 4"
button/3/tooltip = ""
button/3/icon = null
button/4/text = "World 5"
button/4/tooltip = ""
button/4/icon = null
button/selected = 0

[node name="Warning" type="Polygon2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 360, 180 )
polygon = Vector2Array( 60, 60, 60, 300, 540, 300, 540, 60 )
uv = Vector2Array(  )
color = Color( 0, 0.0745098, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label" type="Label" parent="Warning"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 180.0
margin/top = 120.0
margin/right = 420.0
margin/bottom = 180.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
text = "Bloqueado!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Warning"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 180.0
margin/right = 360.0
margin/bottom = 240.0
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ok"
flat = false

[node name="Menu" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1203.0
margin/top = 16.0
margin/right = 1263.0
margin/bottom = 76.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="button_selected" from="MainMenu/VButtonArray" to="." method="_on_VButtonArray_button_selected"]

[connection signal="pressed" from="Warning/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]


